Fix h1 fonts (e.g. 'g') getting cut off at bottom.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ textarea {
 
 h1 {
 	padding-top: 0px;
-	padding-bottom: 0px;
+	padding-bottom: 1px;
 	margin-bottom: 0px;
 	border-bottom: none;
 }
